<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_xxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_label_register_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlRegisterField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel"
            android:layout_marginTop="@dimen/margin_xxxlarge">

            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register_label_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/text_default"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmailLayout"
                style="@style/CustomOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmailLabel"
                android:layout_marginTop="@dimen/margin_default"
                android:animateLayoutChanges="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailLayout"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/text_register_label_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/text_default"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUsernameLayout"
                style="@style/CustomOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsernameLabel"
                android:layout_marginTop="@dimen/margin_default"
                android:animateLayoutChanges="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_hint_username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtUsernameLayout"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/text_register_label_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/text_default"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPasswordLayout"
                style="@style/CustomOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPasswordLabel"
                android:layout_marginTop="@dimen/margin_default"
                android:animateLayoutChanges="true"
                app:errorIconDrawable="@null"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvConfirmPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPasswordLayout"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/text_register_label_confirm_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/text_default"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtConfirmPasswordLayout"
                style="@style/CustomOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConfirmPasswordLabel"
                android:layout_marginTop="@dimen/margin_default"
                android:animateLayoutChanges="true"
                app:errorIconDrawable="@null"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvLoginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlRegisterField"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/text_register_full_login_here"
            android:textSize="@dimen/text_default" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLoginAccount"
            android:layout_marginHorizontal="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:enabled="false"
            android:text="@string/text_action_register"
            android:textAllCaps="true"
            tools:enabled="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>